--- a/assets/src/styles/particles/typography.less
+++ b/assets/src/styles/particles/typography.less
@@ -72,4 +72,8 @@ ul {
 a {
 	text-decoration: none;
 	color: @colour-main;
+
+	&:hover {
+		color: @colour-secondary;
+	}
 }
